--- a/akamatsu/templates/akamatsu/blog/index.html
+++ b/akamatsu/templates/akamatsu/blog/index.html
@@ -36,7 +36,7 @@
 
         <div class="actions">
         {% if post.comments_enabled %}
-            <a href="{{ url_for('blog.show', slug=post.slug) }}#disqus_thread">
+            <a href="{{ url_for('blog.show', slug=post.slug) }}#comments">
                 <i class="fa fa-comments"></i>Comments
             </a>
         {% endif %}
