Added cookie notice. Minor style enhancements

--- a/akamatsu/templates/akamatsu/_macros.html
+++ b/akamatsu/templates/akamatsu/_macros.html
@@ -1,3 +1,23 @@
+{# Show cookie notice #}
+{% macro cookie_notice() %}
+    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#292929"
+        },
+        "button": {
+          "background": "#3E8CC0"
+        }
+      }
+    })});
+    </script>
+{% endmacro %}
+
+
 {# Select comments to render depending on configured type #}
 {% macro render_comments(item, item_type, url) %}
 {% if config.COMMENT_SYSTEM %}
@@ -64,7 +84,6 @@
 
 <section id="isso-thread" data-title="{{ title }}"></section>
 {%- endmacro %}
-
 
 
 {# Used to display only up to the first page break or the whole post #}
