--- a/akamatsu/static/css/akamatsu.css
+++ b/akamatsu/static/css/akamatsu.css
@@ -174,6 +174,15 @@ a.plainlink:visited {
     text-decoration: none;
 }
 
+/*
+===============
+Isso comments
+===============
+*/
+#isso-thread h4 {
+    font-size: 1.5em;
+}
+
 
 /*
 ===============
@@ -233,6 +242,7 @@ Header container
 }
 
 .aka-navbar.sticky {
+    box-shadow: 0 -2px 10px #292929;
     left: 0;
     position: fixed;
     top: 0;
