--- a/akamatsu/templates/akamatsu/layout.html
+++ b/akamatsu/templates/akamatsu/layout.html
@@ -1,3 +1,5 @@
+{% from "akamatsu/_macros.html" import cookie_notice %}
+
 <!DOCTYPE HTML>
 <html>
 <head>
@@ -31,6 +33,9 @@
 {% block head_extend %}{% endblock %}
 
 {% endblock %}
+
+    {# Cookie notice #}
+    {{ cookie_notice() }}
 </head>
 
 <body>
