--- a/akamatsu/templates/akamatsu/page/show.html
+++ b/akamatsu/templates/akamatsu/page/show.html
@@ -16,12 +16,14 @@
             <i>Last updated: </i>
             {{ page.timestamp.strftime('%d %b %Y') }}
         </span>
-
-        <section id="comments">
-            {% if page.comments_enabled %}
-                {{ render_comments(page, 'page', 'page.show') }}
-            {% endif %}
-        </section>
     </article>
+</div>
+
+<div class="grid grid-pad">
+    <section id="comments">
+        {% if post.comments_enabled %}
+            {{ render_comments(post, 'post', 'post.show') }}
+        {% endif %}
+    </section>
 </div>
 {% endblock %}
