--- a/akamatsu/templates/akamatsu/blog/show.html
+++ b/akamatsu/templates/akamatsu/blog/show.html
@@ -38,7 +38,7 @@
 <div class="grid grid-pad">
     <section id="comments">
         {% if post.comments_enabled %}
-            {{ render_comments(post, 'post', 'post.show') }}
+            {{ render_comments(post, 'post', 'blog.show') }}
         {% endif %}
     </section>
 </div>
