--- a/akamatsu/templates/akamatsu/page/show.html
+++ b/akamatsu/templates/akamatsu/page/show.html
@@ -21,8 +21,8 @@
 
 <div class="grid grid-pad">
     <section id="comments">
-        {% if post.comments_enabled %}
-            {{ render_comments(post, 'post', 'post.show') }}
+        {% if page.comments_enabled %}
+            {{ render_comments(page, 'page', 'page.show') }}
         {% endif %}
     </section>
 </div>
