--- a/akamatsu/templates/akamatsu/dashboard/settings/show.html
+++ b/akamatsu/templates/akamatsu/dashboard/settings/show.html
@@ -1,26 +1,11 @@
 {% extends "akamatsu/dashboard/layout.html" %}
 {% from "akamatsu/_macros.html" import render_field, render_checkbox_field, render_submit_field, render_success_msg, render_warning_msg %}
 
-{% block title %}Edit settings{% endblock %}
+{% block title %}Akamatsu settings{% endblock %}
 {% block mini %}.conf{% endblock %}
 
-{# Settings editor #}
+{# Settings viewer #}
 {% block content %}
-
-{# Status #}
-{% if status == 'saveerror' %}
-    {{ render_warning_msg(errmsg) }}
-{% endif %}
-
-{% if status == 'saved' %}
-    {{ render_success_msg('Settings updated') }}
-{% endif %}
-
-
-<form action="" method="POST" role="form">
-    {{ form.hidden_tag() }}
-
-
     {{ render_field(form.sitename) }}
 
     {{ render_field(form.social) }}
@@ -62,13 +47,4 @@
 
     {{ render_field(form.footer_left) }}
     {{ render_field(form.footer_right) }}
-
-
-    <div class="grid grid-pad">
-        <div class="col-1-3 push-1-3">
-            <input type="submit" class="aka-btn-primary" value="Save">
-        </div>
-    </div>
-</form>
-
 {% endblock %}
