Allow disabling cookie notice

--- a/akamatsu/templates/akamatsu/_macros.html
+++ b/akamatsu/templates/akamatsu/_macros.html
@@ -1,20 +1,22 @@
 {# Show cookie notice #}
 {% macro cookie_notice() %}
-    <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
-    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
-    <script>
-    window.addEventListener("load", function(){
-    window.cookieconsent.initialise({
-      "palette": {
-        "popup": {
-          "background": "#292929"
-        },
-        "button": {
-          "background": "#3E8CC0"
-        }
-      }
-    })});
-    </script>
+    {% if config.COOKIE_NOTICE %}
+        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+        <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+        <script>
+        window.addEventListener("load", function(){
+        window.cookieconsent.initialise({
+          "palette": {
+            "popup": {
+              "background": "#292929"
+            },
+            "button": {
+              "background": "#3E8CC0"
+            }
+          }
+        })});
+        </script>
+    {% endif %}
 {% endmacro %}
 
 
