Added custom link parameter for cookie notice

--- a/akamatsu/templates/akamatsu/_macros.html
+++ b/akamatsu/templates/akamatsu/_macros.html
@@ -13,7 +13,12 @@
             "button": {
               "background": "#3E8CC0"
             }
-          }
+          },
+          {% if config.COOKIE_LINK %}
+            "content": {
+              "href": "{{ config.COOKIE_LINK }}"
+            }
+          {% endif %}
         })});
         </script>
     {% endif %}
