--- a/akamatsu/templates/akamatsu/_macros.html
+++ b/akamatsu/templates/akamatsu/_macros.html
@@ -1,8 +1,8 @@
 {# Show cookie notice #}
 {% macro cookie_notice() %}
     {% if config.COOKIE_NOTICE %}
-        <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
-        <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
         <script>
         window.addEventListener("load", function(){
         window.cookieconsent.initialise({
