--- a/akamatsu/templates/auth/forgot_password.html
+++ b/akamatsu/templates/auth/forgot_password.html
@@ -2,36 +2,39 @@
 {% extends "layout.html" %}
 
 {% block title %}{{ _('Forgot password') }}{% endblock %}
+{% block mini %}{{ _('password') }}{% endblock %}
 
-{% block html_body %}
-<body>
-    <section class="hero is-light is-fullheight">
-        <div class="hero-body">
-            <div class="container">
-                <div class="column is-4 is-offset-4">
-                    <h2 class="title is-2 has-text-grey has-text-centered"><a href="{{ url_for('auth.login') }}">{{ config['SITENAME'] }}</a></h2>
-                    <h3 class="subtitle is-3 has-text-grey has-text-centered">{{ _('Forgot password') }}</h3>
+{% block content %}
+<div class="container">
+    <div class="columns">
+        <div class="column is-4 is-offset-4">
+            <h3 class="subtitle is-3 has-text-grey has-text-centered">{{ _('Forgot password') }}</h3>
 
-                    {{ macros.render_flash_messages() }}
+            {{ macros.render_flash_messages() }}
 
-                    <div class="box">
-                        <form action="" method="POST" role="form">
-                            {{ form.hidden_tag() }}
-
-                            {# Email field #}
-                            {{ macros.render_input(form.email, icon='envelope') }}
-
-                            {% if form.errors.email %}
-                                {{ macros.render_messages(form.errors.email, size='') }}
-                            {% endif %}
-
-                            {# Submit #}
-                            {{ macros.render_submit(form.submit) }}
-                        </form>
-                    </div>
+            <div class="box">
+                <div class="has-text-right">
+                    <a class="has-text-right" href="{{ url_for('auth.login') }}">
+                        <span class="icon"><i class="fas fa-chevron-left"></i></span>
+                        <span>{{ _('Back to login') }}</span>
+                    </a>
                 </div>
+
+                <form action="" method="POST" role="form">
+                    {{ form.hidden_tag() }}
+
+                    {# Email field #}
+                    {{ macros.render_input(form.email, icon='envelope') }}
+
+                    {% if form.errors.email %}
+                        {{ macros.render_messages(form.errors.email, size='') }}
+                    {% endif %}
+
+                    {# Submit #}
+                    {{ macros.render_submit(form.submit) }}
+                </form>
             </div>
         </div>
-    </section>
-</body>
+    </div>
+</div>
 {% endblock %}
