--- a/akamatsu/templates/layout.html
+++ b/akamatsu/templates/layout.html
@@ -52,7 +52,7 @@
                     {% endfor %}
                 </div>
                 <h1 class="title">{{ config['SITENAME'] }}</h1>
-                <h2 class="subtitle">{% block mini %}mini{% endblock %}</h2>
+                <h2 class="subtitle">{% block mini %}{% endblock %}</h2>
             </div>
         </div>
     </section>
@@ -61,14 +61,14 @@
     <nav class="navbar is-primary has-margin-bottom" role="navigation" aria-label="main navigation">
         <div class="container">
             <div class="navbar-brand">
-                <a id="sidebar-toggle" role="button" class="navbar-burger" data-target="nav-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
+                <a id="sidebar-toggle" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="nav-menu">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
                 </a>
             </div>
 
-            <div class="navbar-menu">
+            <div id="nav-menu" class="navbar-menu">
                 <div class="navbar-start">
                     {% for item in config.get('NAVBAR', []) %}
                         <a class="navbar-item" href="{{ item['link'] }}">{{ item['text'] }}</a>
