--- a/akamatsu/templates/blog/index.html
+++ b/akamatsu/templates/blog/index.html
@@ -10,7 +10,7 @@
 {% endif %}
 {% endblock %}
 
-{% block mini %}blog{% endblock %}
+{% block mini %}{{ _('blog') }}{% endblock %}
 
 {% block content %}
 <div class="container">
