--- a/akamatsu/templates/blog/show.html
+++ b/akamatsu/templates/blog/show.html
@@ -3,7 +3,7 @@
 
 {% block title %}{{ post.title }}{% endblock %}
 
-{% block mini %}blog{% endblock %}
+{% block mini %}{{ _('blog') }}{% endblock %}
 
 {% block content %}
 <div class="container">
