--- a/akamatsu/templates/macros.html
+++ b/akamatsu/templates/macros.html
@@ -260,7 +260,7 @@
     {% endif %}
 
     <div class="field">
-        {{ field(class_="switch "+size+" is-"+color) }}
+        {{ field(class_="switch is-rounded "+size+" is-"+color) }}
         <label for="{{ field.id }}">{{ label }}</label>
     </div>
 {% endmacro %}
